fixed rotations and et skin

--- a/src/Radiant.rc
+++ b/src/Radiant.rc
@@ -1200,6 +1200,7 @@ BEGIN
     PUSHBUTTON      "Model...",IDC_BTN_ASSIGNMODEL,198,264,36,11
     PUSHBUTTON      "Create",IDC_E_CREATE,188,6,46,13
     CONTROL         "Tab1",IDC_TAB_MODE,"SysTabControl32",TCS_BOTTOM | WS_BORDER,3,338,223,14
+    COMBOBOX        IDC_ANIM_LIST,181,283,48,30,CBS_DROPDOWN | CBS_SORT | WS_VSCROLL | WS_TABSTOP
 END
 
 IDD_GAMMA DIALOGEX 0, 0, 135, 94
